--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -91,7 +91,7 @@
           .span4#left
 
             <!-- Image Carousel -->
-            #carousel.carousel
+            #carousel.carousel.slide
               .carousel-inner
 
                 <!-- Image Carousel Item -->
